# baselines

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: baseline_workloads.rs
docs/: API.md  GALLERY.md  IMPLEMENTATION_STATUS.md  PARITY.md  PYBASELINES_EXAMPLES.md
docs/performance/: README.md  baseline-workloads-2026-05-24.csv  coverage-additions-2026-05-24.csv  (+3 more)
examples/: ruviz_1d.rs  ruviz_2d.rs  ruviz_gallery_basic.rs  ruviz_gallery_beads_preprocessing.rs  ruviz_gallery_pspline_whittaker.rs  ruviz_gallery_spline_lam_vs_num_knots.rs  ruviz_gallery_whittaker_2d_dof.rs  ruviz_gallery_whittaker_solver_timings.rs  ruviz_gallery_whittaker_sweeps.rs  ruviz_lam_effects.rs  ruviz_pybaselines_gallery_basic.rs  ruviz_pybaselines_gallery_beads_preprocessing.rs  ruviz_pybaselines_gallery_pspline_whittaker.rs  ruviz_pybaselines_gallery_spline_lam_vs_num_knots.rs  ruviz_pybaselines_gallery_whittaker_2d_dof.rs  ruviz_pybaselines_gallery_whittaker_solver_timings.rs  ruviz_pybaselines_gallery_whittaker_sweeps.rs  ruviz_pybaselines_lam_effects.rs  ruviz_xy_whittaker_masks.rs
scripts/: generate_pybaselines_2d_fixtures.py  generate_pybaselines_fixtures.py  install-hooks.sh
src/: data.rs  error.rs  fit.rs  lib.rs  workspace.rs
tests/: api_coverage.rs  api_foundation.rs  api_method_chains.rs  benchmark_coverage.rs  pybaselines_2d_fixtures.rs  pybaselines_fixtures.rs  two_d_morphology.rs  two_d_optimizers.rs  two_d_polynomial.rs  two_d_spline.rs  two_d_whittaker.rs
(+41 files in other folders)
